--- a/bry/bry.css
+++ b/bry/bry.css
@@ -2,4 +2,5 @@ body {
     color: rgb(61, 21, 21);
     text-shadow: 1px 1px 3px black;
     text-align: center;
+    background-color: rgb(150, 219, 219);
 }
