--- a/design.css
+++ b/design.css
@@ -1,22 +1,34 @@
-div.c {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: right;
-    background-color: rgb(172, 238, 170);
-}
 div {
+    text-shadow: 1px 1px 3px black;
     text-align: center;
-    margin: 10px;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 1px 1px 4px black inset;
+    font-size: 60px;
+    font-family: Calibri;
+    display: inline-block;
+    margin: 6px;
+    padding: 10px;
+    width: 70px;
+    cursor: pointer;
 }
-div.c div {
-    width: 90px;
-    background-color: rgb(68, 43, 211);
-    font-family: tahoma;
-    font-size: x-large;
-    text-shadow: 1px 1px 3px rgb(199, 152, 22);
-    color: orange;
+.c2 {
+    color: rgb(234, 231, 79);
+    box-shadow: 1px 1px 3px black;
+    border-radius: 5px;
+    background-color: rgb(54, 121, 121);
+}
+.c1 {
+    color: rgb(233, 135, 50);
+}
+.c0 {
+    color: rgb(50, 233, 227);
+}
+body {
+    background-color: rgb(165, 211, 211);
+    text-align: center;
+}
+hr {
+    border-bottom: none;
+    box-shadow: 1px 1px 6px black;
+    height: 10px;
+    background-color: rgb(83, 135, 118);
+    border-radius: 9px;
 }
