--- a/design.css
+++ b/design.css
@@ -11,19 +11,22 @@ div {
     border-radius: 5px;
     user-select: none;
 }
-.c1 {
+.c0 {
     color: rgb(234, 231, 79);
     box-shadow: 1px 1px 3px black;
     background-color: rgb(5, 121, 121);
 }
-.c2 {
+.c1 {
     color: rgb(233, 135, 50);
 }
-.c3 {
+.c2 {
     color: rgb(50, 233, 227);
 }
-.c0 {
+.c3 {
     color: rgb(77, 109, 108);
+}
+.c4 {
+    color: rgb(142, 21, 21);
 }
 body {
     background-color: rgb(165, 211, 211);
